--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://main--magenta-narwhal-7d1776.netlify.app/"
 languageCode = "en-us"
 paginate = 6
 theme = "portio"
